--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="english" translatable="false">English</string>
     <string name="english_code" translatable="false">en</string>
     <string name="favourites">Favourites</string>
+    <string name="homepage_playlist_qty">Homepage playlist song quantity</string>
     <string name="language">Language</string>
     <string name="last_month">Last Month</string>
     <string name="last_week">Last Week</string>
@@ -92,6 +93,7 @@
     <string name="name">Name</string>
     <string name="night">Night</string>
     <string name="no_results">No results found</string>
+    <string name="number_animation_objects">Number of animation objects</string>
     <string name="one_album">1 album</string>
     <string name="one_play">1 play</string>
     <string name="played_n_times">Played %1$d times</string>
@@ -102,8 +104,10 @@
     <string name="search_hint">Search music</string>
     <string name="search_results">Search results</string>
     <string name="select_playlist">Select a playlist or create a new one</string>
+    <string name="spin_speed">Spin speed</string>
     <string name="song_day">Song of the day</string>
     <string name="song_of_the_day_will_be_displayed_here">The song of the day will appear once your library is built</string>
+    <string name="song_quantity">Song quantity</string>
     <string name="spanish" translatable="false">Español</string>
     <string name="spanish_code" translatable="false">es</string>
     <string name="title">Title</string>
