Adding remember playback progress checkbox to the edit song fragment

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -165,4 +165,5 @@
     <string name="number_animation_objects">Número de objetos de animación</string>
     <string name="song_quantity">Cantidad de canción</string>
     <string name="spin_speed">Velocidad de centrifugado</string>
+    <string name="remember_progress">¿Recuerdas el progreso de la reproducción?</string>
 </resources>
